--- a/resources/main_menu.fxml
+++ b/resources/main_menu.fxml
@@ -5,170 +5,145 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainMenuController">
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainMenuController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <Menu mnemonicParsing="false" text="New graph">
-                <MenuItem fx:id="menuNewFromDot" mnemonicParsing="false" text="From DOT file"/>
-                <MenuItem fx:id="menuNewFromPert" mnemonicParsing="false" text="From PERT file"/>
-                <MenuItem fx:id="menuNewWithRange" mnemonicParsing="false" text="With range of nodes"/>
-                <MenuItem fx:id="menuNewEmpty" mnemonicParsing="false" text="Empty"/>
+                <MenuItem fx:id="menuNewFromDot" mnemonicParsing="false" text="From DOT file" />
+                <MenuItem fx:id="menuNewFromPert" mnemonicParsing="false" text="From PERT file" />
+                <MenuItem fx:id="menuNewWithRange" mnemonicParsing="false" text="With range of nodes" />
+                <MenuItem fx:id="menuNewEmpty" mnemonicParsing="false" text="Empty" />
             </Menu>
             <Menu mnemonicParsing="false" text="Export">
-                <MenuItem fx:id="menuExportDot" mnemonicParsing="false" text="To DOT file"/>
-                <MenuItem fx:id="menuExportPert" mnemonicParsing="false" text="To PERT file"/>
-                <MenuItem fx:id="menuExportPng" mnemonicParsing="false" text="To PDF file"/>
+                <MenuItem fx:id="menuExportDot" mnemonicParsing="false" text="To DOT file" />
+                <MenuItem fx:id="menuExportPert" mnemonicParsing="false" text="To PERT file" />
+                <MenuItem fx:id="menuExportPng" mnemonicParsing="false" text="To PDF file" />
             </Menu>
             <Menu mnemonicParsing="false" text="Generate">
-                <MenuItem fx:id="menuRandomDirectedGraph" mnemonicParsing="false" text="Random directed graph"/>
-                <MenuItem fx:id="menuRandomDAG" mnemonicParsing="false" text="Random DAG"/>
+                <MenuItem fx:id="menuRandomDirectedGraph" mnemonicParsing="false" text="Random directed graph" />
+                <MenuItem fx:id="menuRandomDAG" mnemonicParsing="false" text="Random DAG" />
             </Menu>
             <Menu mnemonicParsing="false" text="Compute">
-                <MenuItem fx:id="menuBFS" mnemonicParsing="false" text="Breadth-FIrst-Search"/>
-                <MenuItem fx:id="menuDFS" mnemonicParsing="false" text="Depth-FIrst-Search"/>
-                <MenuItem fx:id="menuTransitiveClosure" mnemonicParsing="false" text="Transitive closure"/>
-                <MenuItem fx:id="menuLongestPath" mnemonicParsing="false" text="Longest path"/>
-                <MenuItem fx:id="menuEarlyTimes" mnemonicParsing="false" text="Early Times"/>
-                <MenuItem fx:id="menuLateTimes" mnemonicParsing="false" text="Late times"/>
-                <MenuItem fx:id="menuCriticalpath" mnemonicParsing="false" text="Critical path"/>
-                <MenuItem fx:id="menuListScheduling" mnemonicParsing="false" text="List scheduling"/>
+                <MenuItem fx:id="menuBFS" mnemonicParsing="false" text="Breadth-FIrst-Search" />
+                <MenuItem fx:id="menuDFS" mnemonicParsing="false" text="Depth-FIrst-Search" />
+                <MenuItem fx:id="menuTransitiveClosure" mnemonicParsing="false" text="Transitive closure" />
+                <MenuItem fx:id="menuLongestPath" mnemonicParsing="false" text="Longest path" />
+                <MenuItem fx:id="menuEarlyTimes" mnemonicParsing="false" text="Early Times" />
+                <MenuItem fx:id="menuLateTimes" mnemonicParsing="false" text="Late times" />
+                <MenuItem fx:id="menuCriticalpath" mnemonicParsing="false" text="Critical path" />
+                <MenuItem fx:id="menuListScheduling" mnemonicParsing="false" text="List scheduling" />
             </Menu>
         </MenuBar>
     </top>
     <center>
         <SplitPane dividerPositions="0.34" prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                <VBox prefHeight="373.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <VBox prefHeight="373.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <AnchorPane prefHeight="20.0" prefWidth="200.0">
                         <VBox.margin>
-                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                         </VBox.margin>
-                        <Button fx:id="displayPertFormat" mnemonicParsing="false" prefHeight="25.0" prefWidth="180.0"
-                                text="PERT format" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="displayPertFormat" mnemonicParsing="false" prefHeight="25.0" prefWidth="180.0" text="PERT format" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <font>
-                                <Font name="Consolas Bold" size="13.0"/>
+                                <Font name="Consolas Bold" size="13.0" />
                             </font>
                         </Button>
                     </AnchorPane>
                     <AnchorPane prefHeight="20.0" prefWidth="200.0">
                         <VBox.margin>
-                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                         </VBox.margin>
-                        <Button fx:id="displayDotFormat" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0"
-                                text="DOT format" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="displayDotFormat" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" text="DOT format" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <font>
-                                <Font name="Consolas Bold" size="13.0"/>
+                                <Font name="Consolas Bold" size="13.0" />
                             </font>
                         </Button>
                     </AnchorPane>
                     <AnchorPane prefHeight="20.0" prefWidth="200.0">
                         <VBox.margin>
-                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                         </VBox.margin>
-                        <Button fx:id="displayAdjacendyList" mnemonicParsing="false" prefHeight="30.0" prefWidth="193.0"
-                                text="Adjacency list" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="displayAdjacendyList" mnemonicParsing="false" prefHeight="30.0" prefWidth="193.0" text="Adjacency list" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <font>
-                                <Font name="Consolas Bold" size="13.0"/>
+                                <Font name="Consolas Bold" size="13.0" />
                             </font>
                         </Button>
                     </AnchorPane>
                     <AnchorPane prefHeight="20.0" prefWidth="200.0">
                         <VBox.margin>
-                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                         </VBox.margin>
-                        <Button fx:id="displayAdjacencyMatrix" mnemonicParsing="false" prefHeight="30.0"
-                                prefWidth="190.0" text="Adjacency matrix" AnchorPane.bottomAnchor="0.0"
-                                AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="displayAdjacencyMatrix" mnemonicParsing="false" prefHeight="30.0" prefWidth="190.0" text="Adjacency matrix" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <font>
-                                <Font name="Consolas Bold" size="13.0"/>
+                                <Font name="Consolas Bold" size="13.0" />
                             </font>
                         </Button>
                     </AnchorPane>
                     <AnchorPane prefHeight="20.0" prefWidth="200.0">
                         <VBox.margin>
-                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                         </VBox.margin>
-                        <Button fx:id="displaySuccessorArray" mnemonicParsing="false" prefHeight="30.0"
-                                prefWidth="190.0" text="Successor array" AnchorPane.bottomAnchor="0.0"
-                                AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="displaySuccessorArray" mnemonicParsing="false" prefHeight="30.0" prefWidth="190.0" text="Successor array" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <font>
-                                <Font name="Consolas Bold" size="13.0"/>
+                                <Font name="Consolas Bold" size="13.0" />
                             </font>
                         </Button>
                     </AnchorPane>
                     <AnchorPane prefHeight="20.0" prefWidth="200.0">
                         <VBox.margin>
-                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                         </VBox.margin>
-                        <Button fx:id="displayReverseGraph" mnemonicParsing="false" prefHeight="30.0" prefWidth="190.0"
-                                text="Reverse graph" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="displayReverseGraph" mnemonicParsing="false" prefHeight="30.0" prefWidth="190.0" text="Reverse graph" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <font>
-                                <Font name="Consolas Bold" size="13.0"/>
+                                <Font name="Consolas Bold" size="13.0" />
                             </font>
                         </Button>
                     </AnchorPane>
-                    <Separator prefHeight="5.0" prefWidth="200.0"/>
+                    <Separator prefHeight="5.0" prefWidth="200.0" />
                     <AnchorPane prefHeight="20.0" prefWidth="200.0">
                         <VBox.margin>
-                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                         </VBox.margin>
-                        <Button fx:id="featureAddNode" mnemonicParsing="false" prefHeight="30.0" prefWidth="190.0"
-                                text="Add a node" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="featureAddNode" mnemonicParsing="false" prefHeight="30.0" prefWidth="190.0" text="Add a node" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <font>
-                                <Font name="Consolas Bold" size="13.0"/>
+                                <Font name="Consolas Bold" size="13.0" />
                             </font>
                         </Button>
                     </AnchorPane>
                     <AnchorPane prefHeight="20.0" prefWidth="200.0">
                         <VBox.margin>
-                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                         </VBox.margin>
-                        <Button fx:id="featureAddEdge" mnemonicParsing="false" prefHeight="20.0" prefWidth="190.0"
-                                text="Add an edge" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="featureAddEdge" mnemonicParsing="false" prefHeight="20.0" prefWidth="190.0" text="Add an edge" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <font>
-                                <Font name="Consolas Bold" size="13.0"/>
+                                <Font name="Consolas Bold" size="13.0" />
                             </font>
                         </Button>
                     </AnchorPane>
                     <AnchorPane prefHeight="20.0" prefWidth="200.0">
                         <VBox.margin>
-                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                         </VBox.margin>
-                        <Button fx:id="featureRemoveNode" mnemonicParsing="false" prefHeight="30.0" prefWidth="190.0"
-                                text="Remove a node" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="featureRemoveNode" mnemonicParsing="false" prefHeight="30.0" prefWidth="190.0" text="Remove a node" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <font>
-                                <Font name="Consolas Bold" size="13.0"/>
+                                <Font name="Consolas Bold" size="13.0" />
                             </font>
                         </Button>
                     </AnchorPane>
                     <AnchorPane prefHeight="20.0" prefWidth="200.0">
                         <VBox.margin>
-                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
+                            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                         </VBox.margin>
-                        <Button fx:id="featureRemoveEdge" mnemonicParsing="false" prefHeight="30.0" prefWidth="190.0"
-                                text="Remove an edge" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="featureRemoveEdge" mnemonicParsing="false" prefHeight="30.0" prefWidth="190.0" text="Remove an edge" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <font>
-                                <Font name="Consolas Bold" size="13.0"/>
+                                <Font name="Consolas Bold" size="13.0" />
                             </font>
                         </Button>
                     </AnchorPane>
                 </VBox>
             </AnchorPane>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                <TextArea fx:id="textAreaDisplayGraph" prefHeight="373.0" prefWidth="392.0"
-                          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                          AnchorPane.topAnchor="0.0"/>
+                <TextArea fx:id="textAreaDisplayGraph" prefHeight="373.0" prefWidth="392.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </AnchorPane>
         </SplitPane>
     </center>
