--- a/resources/remove_node_dialog.fxml
+++ b/resources/remove_node_dialog.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -16,7 +17,10 @@
          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" BorderPane.alignment="CENTER">
              <VBox fx:id="removeNodeDialogBox" prefHeight="366.0" prefWidth="296.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                  <AnchorPane>
-                     <Label alignment="CENTER" prefHeight="17.0" prefWidth="296.0" text="All the nodes : " AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                     <Label alignment="CENTER" prefHeight="17.0" prefWidth="296.0" text="All the nodes : " AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <padding>
+                     <Insets top="10.0" />
+                  </padding></Label>
                  </AnchorPane>
              </VBox>
          </AnchorPane>
